* Tue Aug 20 2013 Dan Prince <dprince@redhat.com> - 1.4.1
  -Add ability to list remote groups with CloudCue provider.
  -Test fixes for CloudCue.

* Wed Jul 19 2013 Dan Prince <dprince@redhat.com> - 1.4.0
  -Add support for CloudCue.
  -Drop old CloudServers VPC stuff (no longer in use)

* Wed Jun 12 2013 Dan Prince <dprince@redhat.com> - 1.3.9
  -XenServer: Extract configure_host_network (matelaket)
  -XenServer: Fix: Configure host network before configuring nodes (matelaket)
  -Remote exec fix - abstract connection checking loop (matelaket)
  -XenServer: check domid before ssh key injection (dprince)

* Thu May 30 2013 Dan Prince <dprince@redhat.com> - 1.3.8
  -Re-release 1.3.7 as 1.3.8 to fix bad gem.

* Thu May 23 2013 Dan Prince <dprince@redhat.com> - 1.3.7
  -Fix issues when using chained qcow images. (sthaha)
  -Ssh option fixes for xenserver provider.

* Fri Apr 26 2013 Dan Prince <dprince@redhat.com> - 1.3.6
  -Set hostname domain to .local in /etc/hosts. This fixes
   fqdn warnings with some config management tools.

* Wed Mar 13 2013 Dan Prince <dprince@redhat.com> - 1.3.5
  -Add remote_exec retry for libvirt_provider (fixes issue where
   initial ssh command fails)

* Sun Mar 3 2013 Dan Prince <dprince@redhat.com> - 1.3.4
  -Improve libvirt file injection so it works with or without LVM. (sthaha)
  -Fix 'kytoon ssh' so it works with multiple args. (sthaha)
  -Exits with a non-zero value (1) on task failure. (sthaha)
  -Verbose output when image creation fails. (sthaha)

* Tue Feb 12 2013 Dan Prince <dprince@redhat.com> - 1.3.3
  -Update SELinux to set correct context on /root/.ssh as well.

* Mon Feb 11 2013 Dan Prince <dprince@redhat.com> - 1.3.2
  -Add 'selinux_enabled' option for libvirt provider. If set this
   option will set the SELinux context on /root/.ssh/authorized_keys
   in the instance thus making it ssh'able when SELinux is enabled.

* Thu Dec 13 2012 Dan Prince <dprince@redhat.com> - 1.3.1