@@ -23,10 +23,11 @@ class ThorTasks < Thor
 
   desc "list", "List existing server groups."
   method_options :group_type => :string
+  method_options :remote => :boolean, :default => false
   def list(options=(options or {}))
     begin
       ServerGroup.init(options[:group_type])
-      ServerGroup.index()
+      ServerGroup.index({:remote => options[:remote]})
     rescue KytoonException => ke
       puts ke.message
       exit 1
@@ -36,10 +37,11 @@ class ThorTasks < Thor
   desc "show", "Print information for a server group."
   method_options :group_id => :string
   method_options :group_type => :string
+  method_options :remote => :boolean, :default => false
   def show(options=(options or {}))
     begin
       ServerGroup.init(options[:group_type])
-      sg = ServerGroup.get(options[:group_id])
+      sg = ServerGroup.get(options[:group_id], {:remote => options[:remote]})
       sg.pretty_print
     rescue KytoonException => ke
       puts ke.message
@@ -50,10 +52,11 @@ class ThorTasks < Thor
   desc "delete", "Delete a server group."
   method_options :group_id => :string
   method_options :group_type => :string
+  method_options :remote => :boolean, :default => false
   def delete(options=(options or {}))
     begin
       ServerGroup.init(options[:group_type])
-      sg = ServerGroup.get(options[:group_id])
+      sg = ServerGroup.get(options[:group_id], {:remote => options[:remote]})
       sg.delete
       SshUtil.remove_known_hosts_ip(sg.gateway_ip)
     rescue KytoonException => ke
@@ -65,10 +68,11 @@ class ThorTasks < Thor
   desc "ip", "Print the IP address of the gateway server"
   method_options :group_id => :string
   method_options :group_type => :string
+  method_options :remote => :boolean, :default => false
   def ip(options=(options or {}))
     begin
       ServerGroup.init(options[:group_type])
-      sg = ServerGroup.get(options[:group_id])
+      sg = ServerGroup.get(options[:group_id], {:remote => options[:remote]})
       puts sg.gateway_ip
     rescue KytoonException => ke
       puts ke.message
@@ -79,16 +83,17 @@ class ThorTasks < Thor
   desc "ssh", "SSH into a group."
   method_options :group_id => :string
   method_options :group_type => :string
+  method_options :remote => :boolean, :default => false
   def ssh(*)
     begin
       ServerGroup.init(options[:group_type])
       args=ARGV[1, ARGV.length].join(" ")
-      sg = ServerGroup.get(options[:group_id])
-      if (ARGV[1] and ARGV[1] =~ /^--group_id.*/) and (ARGV[2] and ARGV[2] =~ /^--group_id.*/)
-        args=ARGV[3, ARGV.length].join(" ")
-      elsif ARGV[1] and ARGV[1] =~ /^--group_id.*/
-        args=ARGV[2, ARGV.length].join(" ")
-      end
+      sg = ServerGroup.get(options[:group_id], {:remote => options[:remote]})
+      arg_count = 1
+      arg_count +=1 if args =~ /--group_type/
+      arg_count +=1 if args =~ /--group_id/
+      arg_count +=1 if args =~ /--remote/
+      args=ARGV[arg_count, ARGV.length].join(" ")
       exec("ssh -o \"StrictHostKeyChecking no\" root@#{sg.gateway_ip} #{args}")
     rescue KytoonException => ke
       puts ke.message
